--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -519,6 +519,94 @@
                         <div class="service-content d-flex align-items-center justify-content-center">
                             <div class="service-content-icon text-start">
                                 <h4 class="mb-3">
+                                    NON-VEG FRY
+                                </h4>
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Chicken Fry</li>
+                                    <li>Mutton Fry</li>
+                                    <li>Prawns Fry</li>
+                                    <li>Fish Fry</li>
+                                    <li>Chicken Drumsticks</li>
+                                    <li>Chicken Lollipop</li>
+                                    <li>Pepper Chicken</li>
+                                    <li>Garlic Chicken</li>
+                                    <li>Apollo Fish</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    CHINESE NON-VEG
+                                </h4>
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Chicken Noodles</li>
+                                    <li>Egg Noodles</li>
+                                    <li>Chicken Fried Rice</li>
+                                    <li>Egg Fried Rice</li>
+                                    <li>Chicken Manchuria</li>
+                                    <li>Chilli Chicken</li>
+                                    <li>Ginger Chicken</li>
+                                    <li>Schezwan Chicken</li>
+                                    <li>Garlic Chicken</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    NON-VEG WELCOME SNACKS
+                                </h4>
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Chicken Tikka</li>
+                                    <li>Murgh Malai Kabab</li>
+                                    <li>Tandoori Chicken</li>
+                                    <li>Chicken Seekh Kabab</li>
+                                    <li>Mutton Seekh Kabab</li>
+                                    <li>Fish Fingers</li>
+                                    <li>Chicken Nuggets</li>
+                                    <li>Loose Prawns</li>
+                                    <li>Hariyali Kabab</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
+                                    NON-VEG CURRIES
+                                </h4>
+                                <ul style="list-style-type:disc; font-weight:bold;">
+                                    <li>Butter Chicken</li>
+                                    <li>Chicken Curry</li>
+                                    <li>Mutton Curry</li>
+                                    <li>Prawns Curry</li>
+                                    <li>Fish Curry</li>
+                                    <li>Gongura Chicken</li>
+                                    <li>Natu Kodi Pulusu</li>
+                                    <li>Mughlai Chicken</li>
+                                    <li>Kadai Chicken</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-4" data-aos="fade-up" data-aos-delay="0">
+                    <div class="bg-light rounded service-item">
+                        <div class="service-content d-flex align-items-center justify-content-center">
+                            <div class="service-content-icon text-start">
+                                <h4 class="mb-3">
                                     HOT ITEM &amp; SNACKS
                                 </h4>
                                 <ul style="list-style-type:disc; font-weight:bold;">
