--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             any special occasion, we bring passion, professionalism, and culinary excellence to ensure every moment is
             truly perfect.</p>
           <div class="row mt-lg-5 mt-4">
-            <div class="col-sm-6 grids_info" data-aos="zoom-in-right" data-aos-duration="3000">
+            <div class="col-xs-6 col-sm-6 grids_info" data-aos="zoom-in-right" data-aos-duration="3000">
               <i class="fa fa-cutlery"></i>
               <div class="detail mt-sm-4 mt-3">
                 <h4>Unmatched Quality</h4>
@@ -612,7 +612,7 @@
               </div>
             </div>
 
-            <div class="col-sm-6 grids_info mt-sm-0 mt-4" data-aos="zoom-in-right" data-aos-duration="3000">
+            <div class="col-xs-6 col-sm-6 grids_info mt-sm-0" data-aos="zoom-in-right" data-aos-duration="3000">
               <i class="fa fa-user"></i>
               <div class="detail mt-sm-4 mt-3">
                 <h4>Exquisite Taste</h4>
