--- a/About.html
+++ b/About.html
@@ -2,7 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Sree Rajesh Caterers | About Us</title>
+    <title>Sree Rajesh Caterers | About Us - Top Caterers in Hyderabad</title>
+    <meta name="description"
+        content="Learn about Sree Rajesh Caterers and our 25-year journey of serving authentic, high-quality food for weddings and events in Hyderabad. Read our story and values.">
+    <meta name="keywords"
+        content="About Sree Rajesh Caterers, Catering History Hyderabad, Best Caterers Profile, Catering Team, Hyderabad Caterers">
+    <link rel="canonical" href="About.html">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Sree Rajesh Caterers | About Us">
+    <meta property="og:description"
+        content="25+ Years of Excellence in Catering. Discover our passion for food and service.">
+    <meta property="og:image" content="rajeshimedia/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="About.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
