--- a/Contact.html
+++ b/Contact.html
@@ -2,7 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>Sree Rajesh Caterers | Contact Us</title>
+    <title>Contact Us | Sree Rajesh Caterers - Book Your Catering Event</title>
+    <meta name="description"
+        content="Contact Sree Rajesh Caterers for inquiries and bookings. Call +91 92462 41199 or visit us in Miyapur, Hyderabad. Let's make your event unforgettable.">
+    <meta name="keywords"
+        content="Contact Caterers Hyderabad, Catering Booking, Caterers Phone Number, Sree Rajesh Caterers Address, Miyapur Caterers">
+    <link rel="canonical" href="Contact.html">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Contact Us | Sree Rajesh Caterers">
+    <meta property="og:description" content="Book the best catering services in Hyderabad. Call us today!">
+    <meta property="og:image" content="rajeshimedia/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="Contact.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
