--- a/Gallery.html
+++ b/Gallery.html
@@ -2,7 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Sree Rajesh Caterers | Gallery</title>
+    <title>Catering Gallery | Sree Rajesh Caterers - Event & Food Photos</title>
+    <meta name="description"
+        content="Explore our gallery of catering events. Photos of our delicious food setups, wedding catering, and happy clients in Hyderabad & Secunderabad.">
+    <meta name="keywords"
+        content="Catering Gallery, Food Photos, Wedding Catering Images, Sree Rajesh Caterers Gallery, Event Photos">
+    <link rel="canonical" href="Gallery.html">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Catering Gallery | Sree Rajesh Caterers">
+    <meta property="og:description"
+        content="View our portfolio of successful catering events and mouth-watering dishes.">
+    <meta property="og:image" content="rajeshimedia/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="Gallery.html">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
