--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -2,9 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>
-        Sree Rajesh Caterers | Non Veg Menu
-    </title>
+    <title>Non-Veg Catering Menu | Sree Rajesh Caterers - Biryani & More</title>
+    <meta name="description"
+        content="Discover our mouth-watering Non-Veg Menu featuring authentic Hyderabad Biryani, Curries, and Starters. Perfect for weddings and grand celebrations in Hyderabad.">
+    <meta name="keywords"
+        content="Non-Veg Catering Menu, Chicken Biryani Catering, Mutton Biryani, Hyderabad Non-Veg Caterers, Wedding Feast">
+    <link rel="canonical" href="Non-Veg.html">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Non-Veg Catering Menu | Sree Rajesh Caterers">
+    <meta property="og:description" content="Authentic Non-Vegetarian Catering. Biryani, Curries, and more.">
+    <meta property="og:image" content="rajeshimedia/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="Non-Veg.html">
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
