--- a/Veg.html
+++ b/Veg.html
@@ -2,9 +2,19 @@
 <html lang="en">
 
 <head>
-    <title>
-        Sree Rajesh Caterers | Veg Menu
-    </title>
+    <title>Veg Catering Menu | Sree Rajesh Caterers - Pure Vegetarian Delights</title>
+    <meta name="description"
+        content="Explore our extensive Vegetarian Menu featuring South Indian, North Indian, and Chinese dishes. From Tiffin to Dinner, including Paneer, Dal, and Rice specialties.">
+    <meta name="keywords"
+        content="Veg Catering Menu, Vegetarian Wedding Menu, Pure Veg Catering Hyderabad, South Indian Veg Menu, North Indian Veg Catering">
+    <link rel="canonical" href="Veg.html">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Veg Catering Menu | Sree Rajesh Caterers">
+    <meta property="og:description" content="Authentic Vegetarian Catering. Explore our wide variety of veg dishes.">
+    <meta property="og:image" content="rajeshimedia/logo.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="Veg.html">
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
