--- a/index.html
+++ b/index.html
@@ -2,7 +2,21 @@
 <html lang="en">
 
 <head>
-  <title>Sree Rajesh Caterers</title>
+  <title>Sree Rajesh Caterers | Best Catering Services in Hyderabad</title>
+  <meta name="description"
+    content="Sree Rajesh Caterers offers premium vegetarian and non-vegetarian catering for weddings, corporate events, and parties in Hyderabad & Secunderabad. Call 9246241199.">
+  <meta name="keywords"
+    content="Catering Services Hyderabad, Wedding Caterers, Corporate Catering, Veg Catering, Non-Veg Catering, Sree Rajesh Caterers, Hyderabad, Secunderabad, Best Caterer">
+  <meta name="author" content="Sree Rajesh Caterers">
+  <link rel="canonical" href="index.html">
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Sree Rajesh Caterers | Best Catering Services in Hyderabad">
+  <meta property="og:description"
+    content="Sree Rajesh Caterers offers premium vegetarian and non-vegetarian catering for weddings, corporate events, and parties in Hyderabad & Secunderabad.">
+  <meta property="og:image" content="rajeshimedia/logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="index.html">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
