--- a/Gallery.html
+++ b/Gallery.html
@@ -252,7 +252,7 @@
             height: 65px;
             line-height: 65px;
             border-radius: 50%;
-            background: #c58723;
+            background: #f5cc35;
             color: #fff;
         }
 
@@ -868,11 +868,11 @@
         }
 
         .footer-top-16 {
-            background-color: #c58723;
+            background-color: #f5cc35;
         }
 
         .copy-section {
-            background-color: #c58723;
+            background-color: #f5cc35;
         }
 
         .w3l-footer-16 input[type="email"] {
