--- a/Contact.html
+++ b/Contact.html
@@ -153,11 +153,11 @@
         }
 
         .footer-top-16 {
-            background-color: #c58723;
+            background-color: #f5cc35;
         }
 
         .copy-section {
-            background-color: #c58723;
+            background-color: #f5cc35;
         }
 
         .cont-top {
