--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -110,7 +110,7 @@
 
         .grids_info i {
             font-size: 28px;
-            background: #c58723;
+            background: #f5cc35;
             color: #fff;
             width: 60px;
             height: 60px;
