--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     .grids_info i {
       font-size: 28px;
-      background: #c58723;
+      background: #f5cc35;
       color: #fff;
       width: 60px;
       height: 60px;
@@ -92,7 +92,7 @@
 
     .feature i {
       font-size: 28px;
-      background: #c58723;
+      background: #f5cc35;
       color: #fff;
       width: 70px;
       height: 70px;
@@ -102,7 +102,7 @@
       margin-bottom: 20px;
       display: inline-block;
       border: 3px solid #fff;
-      box-shadow: 0 0 0 1px #c58723;
+      box-shadow: 0 0 0 1px #f5cc35;
     }
 
     .fa-utensils:before {
@@ -197,7 +197,7 @@
       text-align: center;
       font-size: 30px;
       color: #fff;
-      background: #c58723;
+      background: #f5cc35;
     }
 
     .w3l-whyblock .grids_info h4 {
@@ -454,7 +454,7 @@
     }
 
     .btn-confirm {
-      background-color: #c58723;
+      background-color: #f5cc35;
       color: #fff;
     }
 
@@ -808,7 +808,7 @@
         </div>
         <div class="col-md-3 col-sm-6 feature text-center">
           <i class="fa fa-truck"></i>
-          <h3><a href="" style="color: #c58723;">Seamless Service Citywide</a></h3>
+          <h3><a href="" style="color: #f5cc35;">Seamless Service Citywide</a></h3>
           <p>From the heart of the city to the outskirts, we bring our culinary excellence to your doorstep anywhere in
             Hyderabad. Our logistics ensure food arrives fresh, hot, and on time, no matter the location.</p>
         </div>
