--- a/Contact.html
+++ b/Contact.html
@@ -20,27 +20,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <link href="css/PxMICACEvtqB.css" rel="stylesheet">
-
+    <link href="css/PxMICACEvtqB.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/pFkE8c13hWpq.css">
     <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
-    <link rel="stylesheet" type="text/css" href="css/Hkqlp3d4VIot.css">
     <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
-    <link rel="stylesheet" type="text/css" href="css/GbO9wwU8C1Sq.css">
-    <link rel="stylesheet" type="text/css" href="css/BADqT9SWee2R.css">
-    <link rel="stylesheet" type="text/css" href="css/ULNDNu8ldaqq.css">
-    <link rel="stylesheet" type="text/css" href="css/RlTezcBzOAFt.css">
-    <link rel="stylesheet" type="text/css" href="css/GL9OTmjY0Amq.css">
-    <link rel="stylesheet" type="text/css" href="css/4S1KrRELUsPW.css">
-    <link rel="stylesheet" type="text/css" href="css/v6mS0LGdZG5E.css">
-    <link rel="stylesheet" type="text/css" href="css/oCEjUZZFGIAd.css">
     <link rel="stylesheet" type="text/css" href="css/footer.css">
     <link rel="shortcut icon" href="rajeshimedia/logo.png">
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <link rel="stylesheet" href="css/style.css">
 
 
 
