--- a/Non-Veg.html
+++ b/Non-Veg.html
@@ -18,26 +18,13 @@
     <meta charset="utf-8" />
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link href="css/PxMICACEvtqB.css" rel="stylesheet" />
-    <link href="css/pFkE8c13hWpq.css" rel="stylesheet" type="text/css" />
-    <link href="css/4fTQ3m0AiaJ9.css" rel="stylesheet" type="text/css" />
-    <link href="css/Hkqlp3d4VIot.css" rel="stylesheet" type="text/css" />
-    <link href="css/a4uDToAOB0JO.css" rel="stylesheet" type="text/css" />
-    <link href="css/GbO9wwU8C1Sq.css" rel="stylesheet" type="text/css" />
-    <link href="css/BADqT9SWee2R.css" rel="stylesheet" type="text/css" />
-    <link href="css/ULNDNu8ldaqq.css" rel="stylesheet" type="text/css" />
-    <link href="css/RlTezcBzOAFt.css" rel="stylesheet" type="text/css" />
-    <link href="css/GL9OTmjY0Amq.css" rel="stylesheet" type="text/css" />
-    <link href="css/4S1KrRELUsPW.css" rel="stylesheet" type="text/css" />
-    <link href="css/v6mS0LGdZG5E.css" rel="stylesheet" type="text/css" />
-    <link href="css/oCEjUZZFGIAd.css" rel="stylesheet" type="text/css" />
-    <link href="css/menu-custom.css" rel="stylesheet" type="text/css" />
-    <link href="css/footer.css" rel="stylesheet" type="text/css" />
-    <link href="rajeshimedia/logo.png" rel="shortcut icon" />
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
+    <link href="css/PxMICACEvtqB.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/pFkE8c13hWpq.css">
+    <link rel="stylesheet" type="text/css" href="css/4fTQ3m0AiaJ9.css">
+    <link rel="stylesheet" type="text/css" href="css/a4uDToAOB0JO.css">
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
+    <link rel="shortcut icon" href="rajeshimedia/logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <style>
         .logo-image {
             width: 100%;
