--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/marriage.png" alt="Weddings">
+                    <img loading="lazy" src="rajeshimedia/services/3.png" alt="Weddings">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Weddings</a></h3>
@@ -673,7 +673,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/birthday.png" Birthday Parties">
+                    <img loading="lazy" src="rajeshimedia/services/1.png" alt="Birthday Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Birthday Bashes</a></h3>
@@ -684,7 +684,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/Traditionally.png" alt="Traditional Ceremonies">
+                    <img loading="lazy" src="rajeshimedia/services/2.png" alt="Traditional Ceremonies">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Traditional Feasts</a></h3>
@@ -695,7 +695,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/Housewarming .png" alt="Housewarming">
+                    <img loading="lazy" src="rajeshimedia/services/4.png" alt="Housewarming">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Housewarming</a></h3>
@@ -707,7 +707,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/private.png" alt="Private Parties">
+                    <img loading="lazy" src="rajeshimedia/services/5.png" alt="Private Parties">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Private Gatherings</a></h3>
@@ -718,7 +718,7 @@
               <div class="item">
                 <div class="item_inner">
                   <div class="image">
-                    <img loading="lazy" src="rajeshimedia/CorporateEvents.png" alt="Corporate Events">
+                    <img loading="lazy" src="rajeshimedia/services/6.png" alt="Corporate Events">
                     <a href="#"></a>
                   </div>
                   <h3><a href="#">Corporate Events</a></h3>
